# saas-middleware

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  exceptions.md  pyproject.toml  requirements.txt  saas_cli.py  service.py  setup.cfg  setup.py
apps/: test_service.py
cli/: cmd_dor.py  cmd_identity.py  cmd_network.py  cmd_rti.py  cmd_service.py  exceptions.py  helpers.py
config/: testing-config.json
dashboard/: cli.py  proxy.py  schemas.py  server.py
relay/: cli.py  server.py
saas/: _meta.py  app.py  eckeypair.py  exceptions.py  helpers.py  json_schemas.py  logging.py  meta.py  node.py  schemas.py  secure_messenger.py  service.py
services/: dor.py  dor_blueprint.py  eckeypair.py  node.py  nodedb.py  secure_messenger.py  service.py  utilities.py
tests/: base_testcase.py  conftest.py  credentials.json  dummy_script.py  proc_dummy_script.py  test_app_dashboard.py  test_app_relay.py  test_app_server.py  test_cli.py  test_cli_job_runner.py  test_cli_proc_builder.py  test_core.py  test_cryptography.py  test_cs15_dss_backend.py  test_dashboard_server.py  test_dor.py  test_eckeypair.py  test_keystore.py  test_logging.py  test_node.py  test_nodedb.py  test_p2p_service.py  test_processor.py  test_registry.py  test_registry_protocol.py  test_request_manager.py  test_rti.py  test_sdk_app.py  test_sdk_auth.py  test_sdk_base.py  test_sdk_proc.py  test_sdk_relay.py  test_service_cmd.py  test_service_dor.py  test_service_email.py  test_service_nodedb.py  test_service_p2p.py  test_service_registry.py  test_service_rest.py  test_service_rti.py  (+2 more)
(+199 files in other folders)
