[metadata]
# replace with your username:
name = saas-middleware
version = 0.0.1
author = Heiko Aydt
author_email = heiko.aydt@gmail.com
description = Simulation-as-a-Service Middleware
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cooling-singapore/saas-middleware
project_urls =
    Bug Tracker = https://github.com/cooling-singapore/saas-middleware/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    flask 
    flask_cors 
    requests 
    jsonschema 
    canonicaljson 
    cryptography 
    docker
    sqlalchemy
    PyInquirer
