[metadata]
# replace with your username:
name = saas-middleware
version = 1.0.0
description = Simulation-as-a-Service Middleware
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cooling-singapore/saas-middleware
project_urls =
    Bug Tracker = https://github.com/cooling-singapore/saas-middleware/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ==3.9.*
install_requires =
    tabulate
    sqlalchemy
    python-snappy
    flask_cors
    docker
    PyInquirer

[options.entry_points]
console_scripts =
    saas-cli = saas.cli.saas_cli:main
